created form to comment a movie

--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -2,4 +2,6 @@
 .jumbotron
   = @movie.description
 - if user_signed_in?
+  .content
+    = render 'comment_form'
   %p= link_to 'Email me details about this movie', send_info_movie_path(@movie), class: 'btn btn-sm btn-default'
