--- a/app/views/movies/_comment_form.html.haml
+++ b/app/views/movies/_comment_form.html.haml
@@ -1,4 +1,4 @@
-.row
+#form.row
   = form_with(url: create_comment_path, scope: 'comment', :html => {class: 'form-row align-items-center'}) do |form|
     .col-sm-8
       = form.text_field :description, :class => 'form-control', placeholder: "Type your comment here..."
