--- a/app/views/movies/_comments.html.haml
+++ b/app/views/movies/_comments.html.haml
@@ -1,5 +1,5 @@
 -if @comments
-  .container.margin
+  #comments.container.margin
     %h3 list of comments
     -@comments.each do |comment|
       .row
